@@ -1,7 +1,7 @@
 /*
   mysqlfs - MySQL Filesystem
   Copyright (C) 2006 Michal Ludvig <michal@logix.cz>
-  $Id: log.c,v 1.4 2006/09/13 02:58:23 ludvigm Exp $
+  $Id: log.c,v 1.5 2006/09/13 10:54:37 ludvigm Exp $
 
   This program can be distributed under the terms of the GNU GPL.
   See the file COPYING.
@@ -20,10 +20,11 @@
 #include "log.h"
 
 FILE *log_file;
-int log_types_mask = LOG_ERROR | LOG_INFO | LOG_DEBUG;
-//int log_types_mask = LOG_ERROR | LOG_INFO;
+//int log_types_mask = LOG_ERROR | LOG_INFO | LOG_DEBUG;
+int log_types_mask = LOG_ERROR | LOG_INFO;
 //int log_debug_mask = LOG_D_CALL | LOG_D_SQL | LOG_D_OTHER;
-int log_debug_mask = -1;
+//int log_debug_mask = LOG_D_CALL;
+int log_debug_mask = 0;
 
 #define BUFSIZE 512
 
